// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card should handle click 1`] = `
<DocumentFragment>
  <div
    class="sc-AxjAm eWJHeF"
  >
    Test
  </div>
</DocumentFragment>
`;

exports[`Card should render 1`] = `
<DocumentFragment>
  <div
    class="sc-AxjAm eWJHeF"
  />
</DocumentFragment>
`;
